Code smell fix